--- a/get_follower.ipynb
+++ b/get_follower.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +68,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "path = [\"__DEFAULT_SCOPE__\",\"webapp.user-detail\",\"userInfo\",\"stats\",\"followerCount\"]\n",
+    "\n",
+    "@make_parallel\n",
+    "def get_follower(link,results):\n",
+    "    try:\n",
+    "        res = request_tiktok(link)\n",
+    "        follower = Common.get_dict_data_by_path(res, path)\n",
+    "        results.append({\"link\": link, \"follower\": follower})\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        results.append({\"link\": link, \"follower\": None})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1: https://www.tiktok.com/@laamanh2\n",
+      "1: https://www.tiktok.com/@vtv24news\n",
       "1: https://www.tiktok.com/@laamanh2\n"
      ]
     }
@@ -83,11 +103,7 @@
    "source": [
     "links = input(\"Enter links: \").split(\" \")\n",
     "results = []\n",
-    "path = [\"__DEFAULT_SCOPE__\",\"webapp.user-detail\",\"userInfo\",\"stats\",\"followerCount\"]\n",
-    "for link in links:\n",
-    "    res = request_tiktok(link)\n",
-    "    follower = Common.get_dict_data_by_path(res, path)\n",
-    "    results.append({\"link\": link, \"follower\": follower})\n",
+    "get_follower(links, results)\n",
     "    \n",
     "df = pd.DataFrame(results)\n",
     "df.to_csv(\"follower.csv\", index=False)\n"
